# mosse-cv

./: .gitmodules  CMakeLists.txt  Makefile  repl.sh
cmake/: ExtractValidFlags.cmake
embmosse/: CMakeLists.txt  Mosse.cpp  Mosse.hpp  Mosse.hpp.fwd  Tracker.cpp  Tracker.hpp
embmosse/Port/: MossePort.hpp  OsApi.cpp  OsApi.hpp  Thread.hpp
embmosse/Port/Thread/: PthreadThread.cpp  PthreadThread.hpp  StlThread.cpp  StlThread.hpp
embmosse/Types/: EigenAux.hpp  Port.hpp  Repr.hpp  Tracking.cpp  Tracking.hpp
embmosse/Util/: Mem.cpp  Mem.hpp  Ops.cpp  Ops.hpp
embmosse/Util/Arithm/: Arithm.hpp  Conv.hpp  MemLayout.hpp
embmosse/Util/Helper/: Apply.hpp  EigenMem.hpp  EigenSeq.cpp  EigenVisitor.hpp  En.h  EspDspFft2.hpp  FpmHelper.hpp  IndexSequence.hpp  InstanceCounter.hpp  PrecompiledMatrixHelper.hpp  ReTp.hpp  StoreType.hpp
embmosse/Util/Mem/: DynRawF32Mem.cpp  DynRawF32Mem.hpp  DynRawMem.hpp
embmosse/Util/Ops/: CommonOps.hpp  DebugRawF32Ops.cpp  DebugRawF32Ops.hpp  EspDspRawF32Ops.cpp  EspDspRawF32Ops.hpp  FpI16AbRawF32Ops.cpp  FpI16AbRawF32Ops.hpp  Log2FloatBufOps.cpp  OpencvNativeRawF32Ops.cpp  OpencvNativeRawF32Ops.hpp  ParallelOps.cpp  ParallelOps.hpp  RawF32Ops.cpp  RawF32Ops.hpp  ThreadedOps.cpp  ThreadedOps.hpp
lib/: CMakeLists.txt
lib/cnl/: CMakeLists.txt
lib/doctest/: CMakeLists.txt
lib/espdsp/: CMakeLists.txt
lib/fft/: CMakeLists.txt
lib/fft/fft/: Fft.cpp  Fft.h  Fft_arrays.h
lib/fpm/: CMakeLists.txt
lib/malloccounter/: CMakeLists.txt  MallocCounter.cpp  MallocCounter.hpp
lib/mosseapi/: CMakeLists.txt  MosseApi.cpp  MosseApi.hpp  MosseApiDebug.hpp
lib/mosseapi/MosseTables/: GaussKernelFft32x64.hpp  GaussKernelFft40x40.hpp  GaussKernelFft45x45.hpp  GaussKernelFft50x50.hpp  GaussKernelFft50x80.hpp  GaussKernelFft60x60.hpp  GaussKernelFft60x95.hpp  GaussKernelFft63x86.hpp  GaussKernelFft64x32.hpp  GaussKernelFft64x64.hpp  GaussKernelFft65x85.hpp  GaussKernelFft70x70.hpp  GaussKernelFft75x75.hpp  GaussKernelFft80x50.hpp  GaussKernelFft85x65.hpp  GaussKernelFft86x63.hpp  GaussKernelFft95x60.hpp  Hann32x64.hpp  Hann40x40.hpp  Hann45x45.hpp  Hann50x50.hpp  Hann50x80.hpp  Hann60x60.hpp  Hann60x95.hpp  Hann63x86.hpp  Hann64x32.hpp  Hann64x64.hpp  Hann65x85.hpp  Hann70x70.hpp  Hann75x75.hpp  Hann80x50.hpp  Hann85x65.hpp  Hann86x63.hpp  Hann95x60.hpp  LogMatrix.hpp  MosseTables.hpp
lib/ohdebug/: CMakeLists.txt  OhDebug.hpp
portsrc/: CMakeLists.txt  Mosse.cpp  Mosse.hpp  Mosse.hpp.fwd  MossePort.hpp  Tracker.cpp  Tracker.hpp  U16Tracker.hpp
portsrc/Port/: MossePort.hpp  OsApi.cpp  OsApi.hpp  Task.hpp  Thread.cpp  Thread.hpp
portsrc/Port/Thread/: PthreadThread.cpp  PthreadThread.hpp  StlThread.cpp  StlThread.hpp
portsrc/Types/: EigenAux.hpp  Mem.hpp  Port.hpp  Repr.hpp  Tracking.cpp  Tracking.hpp
portsrc/Util/: Arithm.hpp  Bitop.hpp  EigenVisitor.hpp  Fft.hpp  Mem.cpp  Mem.hpp  MemLayout.hpp  Mosse.cpp  MosseDebug.hpp  Ops.cpp  Ops.hpp  README.md
portsrc/Util/Arithm/: Algo.hpp  Arithm.hpp  Conv.hpp  MemLayout.hpp  README.md
portsrc/Util/Helper/: Apply.hpp  Bitop.hpp  EigenMem.hpp  EigenSeq.cpp  EigenSeq.hpp  EigenVisitor.hpp  EspDspFft2.hpp  FpmHelper.hpp  PrecompiledMatrixHelper.hpp  README.md  ReTp.hpp  RowColSequence.cpp  RowColSequence.hpp
portsrc/Util/Mem/: DynRawF32Mem.cpp  DynRawF32Mem.hpp  DynRawMem.hpp  PrecHgMem.cpp  PrecHgMem.hpp
portsrc/Util/Ops/: CommonOps.hpp  DebugRawF32Ops.cpp  DebugRawF32Ops.hpp  EspDspRawF32Ops.cpp  EspDspRawF32Ops.hpp  FpI16AbRawF32Ops.cpp  FpI16AbRawF32Ops.hpp  Log2FloatBufOps.hpp  OpencvNativeRawF32Ops.cpp  OpencvNativeRawF32Ops.hpp  OpencvTracker.cpp  OpencvTracker.hpp  ParallelOps.cpp  ParallelOps.hpp  RawF32Ops.cpp  RawF32Ops.hpp  ThreadedOps.cpp  ThreadedOps.hpp
src/: MallocCounter.cpp  OhDebug.hpp  main.cpp  selectROI.cpp  tracker.cpp  tracker.h
test/: CMakeLists.txt  Signal.hpp  TestApply.cpp  TestCnl.cpp  TestEspDsp.cpp  TestFpm.cpp  TestMem.cpp  TestMemoryLayout.cpp  TestParallelOps.cpp  TestThreadedOps.cpp  TestTypes.cpp  test.cpp
