cmake_minimum_required(VERSION 2.8)
# Enforce stringent code checking policy
include(ExtractValidFlags)
project(embmosse)
FILE(GLOB_RECURSE SOURCEFILES "*.cpp")
add_library(embmosse ${SOURCEFILES} )
target_link_libraries(embmosse PRIVATE mosselibs)
if(NOT MOSSE_PORTABLE)
		target_compile_options(embmosse PRIVATE -g)
endif()
target_include_directories(embmosse PRIVATE ".")
target_include_directories(embmosse PUBLIC "..")
target_compile_options(embmosse PRIVATE ${MOSSE_COMPILER_FLAGS})
target_compile_options(embmosse PRIVATE -DMOSSE_ARROGANT_HOLD_FRAMES=${MOSSE_ARROGANT_HOLD_FRAMES})
