add_subdirectory(mosseapi)
add_subdirectory(ohdebug)
add_subdirectory(fft)
add_subdirectory(doctest)
add_subdirectory(espdsp)
add_library(mosselibs INTERFACE)
add_library(eigen INTERFACE)
target_include_directories(eigen INTERFACE eigen)
target_link_libraries(mosselibs INTERFACE fft mosseapi ohdebug doctest eigen espdsp)

if(NOT MOSSE_PORTABLE)
	add_subdirectory(malloccounter)
	target_link_libraries(mosselibs INTERFACE malloccounter pthread)
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORTABLE=0)
else()
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORTABLE=1)
endif()
