add_subdirectory(mosseapi)
add_subdirectory(ohdebug)
add_subdirectory(fft)
add_subdirectory(fpm EXCLUDE_FROM_ALL)
add_library(mosselibs INTERFACE)
add_library(eigen INTERFACE)
target_include_directories(eigen INTERFACE eigen)
target_link_libraries(mosselibs INTERFACE fft mosseapi ohdebug eigen fpm)

if(NOT MOSSE_PORTABLE)
	add_subdirectory(doctest)
	add_subdirectory(malloccounter)
	add_subdirectory(espdsp)
	target_link_libraries(mosselibs INTERFACE malloccounter pthread doctest espdsp)
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORTABLE=0)
else()
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORTABLE=1)
endif()

if(MOSSE_PORT_USE_CASSERT)
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORT_USE_CASSERT=1)
else()
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_PORT_USE_CASSERT=0)
endif()

if (MOSSE_MEM_CLONE_IMAGE_WORKING_AREA)
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_MEM_CLONE_IMAGE_WORKING_AREA=1)
else()
	target_compile_definitions(mosselibs INTERFACE -DMOSSE_MEM_CLONE_IMAGE_WORKING_AREA=0)
endif()
