project(espdsp)
set(CMAKE_CXX_STANDARD 11)
set(COMPONENT_SRCS  "espdsp/modules/common/misc/dsps_pwroftwo.cpp"
                    "espdsp/modules/dotprod/float/dsps_dotprod_f32_ansi.c"
                    "espdsp/modules/dotprod/float/dsps_dotprode_f32_ansi.c"
                    "espdsp/modules/dotprod/fixed/dsps_dotprod_s16_ansi.c"
                    "espdsp/modules/dotprod/float/dspi_dotprod_f32_ansi.c"
                    "espdsp/modules/dotprod/float/dspi_dotprod_off_f32_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_s16_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_u16_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_s8_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_u8_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_off_s16_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_off_u16_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_off_s8_ansi.c"
                    "espdsp/modules/dotprod/fixed/dspi_dotprod_off_u8_ansi.c"
                    "espdsp/modules/matrix/float/dspm_mult_f32_ansi.c"
                    "espdsp/modules/matrix/fixed/dspm_mult_s16_ansi.c"
                    "espdsp/modules/matrix/mat/mat.cpp"
                    "espdsp/modules/math/mulc/float/dsps_mulc_f32_ansi.c"
                    "espdsp/modules/math/addc/float/dsps_addc_f32_ansi.c"
                    "espdsp/modules/math/mulc/fixed/dsps_mulc_s16_ansi.c"
                    "espdsp/modules/math/add/float/dsps_add_f32_ansi.c"
                    "espdsp/modules/math/add/fixed/dsps_add_s16_ansi.c"
                    "espdsp/modules/math/sub/float/dsps_sub_f32_ansi.c"
                    "espdsp/modules/math/mul/float/dsps_mul_f32_ansi.c"
                    "espdsp/modules/math/mul/fixed/dsps_mul_s16_ansi.c"
                    "espdsp/modules/math/sqrt/float/dsps_sqrt_f32_ansi.c"
                    "espdsp/modules/fft/float/dsps_fft2r_fc32_ansi.c"
                    "espdsp/modules/fft/float/dsps_fft2r_fc32_ae32.c"
                    "espdsp/modules/fft/float/dsps_fft4r_fc32_ansi.c"
                    "espdsp/modules/fft/float/dsps_fft4r_fc32_ae32.c"
                    "espdsp/modules/fft/float/dsps_fft2r_bitrev_tables_fc32.c"
                    "espdsp/modules/fft/float/dsps_fft4r_bitrev_tables_fc32.c"
                    "espdsp/modules/fft/fixed/dsps_fft2r_sc16_ansi.c"
                    "espdsp/modules/dct/float/dsps_dct_f32.c"
                    "espdsp/modules/support/snr/float/dsps_snr_f32.cpp"
                    "espdsp/modules/support/sfdr/float/dsps_sfdr_f32.cpp"
                    "espdsp/modules/support/misc/dsps_d_gen.c"
                    "espdsp/modules/support/misc/dsps_h_gen.c"
                    "espdsp/modules/support/misc/dsps_tone_gen.c"
                    "espdsp/modules/support/view/dsps_view.cpp"
                    "espdsp/modules/windows/hann/float/dsps_wind_hann_f32.c"
                    "espdsp/modules/windows/blackman/float/dsps_wind_blackman_f32.c"
                    "espdsp/modules/windows/blackman_harris/float/dsps_wind_blackman_harris_f32.c"
                    "espdsp/modules/windows/blackman_nuttall/float/dsps_wind_blackman_nuttall_f32.c"
                    "espdsp/modules/windows/nuttall/float/dsps_wind_nuttall_f32.c"
                    "espdsp/modules/windows/flat_top/float/dsps_wind_flat_top_f32.c"
                    "espdsp/modules/conv/float/dsps_conv_f32_ansi.c"
                    "espdsp/modules/conv/float/dsps_corr_f32_ansi.c"
                    "espdsp/modules/conv/float/dsps_ccorr_f32_ansi.c"
                    "espdsp/modules/iir/biquad/dsps_biquad_f32_ansi.c"
                    "espdsp/modules/iir/biquad/dsps_biquad_gen_f32.c"
                    "espdsp/modules/fir/float/dsps_fir_f32_ansi.c"
                    "espdsp/modules/fir/float/dsps_fir_init_f32.c"
                    "espdsp/modules/fir/float/dsps_fird_f32_ansi.c"
                    "espdsp/modules/fir/float/dsps_fird_init_f32.c"
                    "espdsp/modules/kalman/ekf/common/ekf.cpp"
                    "espdsp/modules/kalman/ekf_imu13states/ekf_imu13states.cpp"
                    )

set(COMPONENT_ADD_INCLUDEDIRS   "espdsp/modules/dotprod/include"
                                "espdsp/modules/support/include"
                                "espdsp/modules/windows/include"
                                "espdsp/modules/windows/hann/include"
                                "espdsp/modules/windows/blackman/include"
                                "espdsp/modules/windows/blackman_harris/include"
                                "espdsp/modules/windows/blackman_nuttall/include"
                                "espdsp/modules/windows/nuttall/include"
                                "espdsp/modules/windows/flat_top/include"
                                "espdsp/modules/iir/include"
                                "espdsp/modules/fir/include"
                                "espdsp/modules/math/include"
                                "espdsp/modules/math/add/include"
                                "espdsp/modules/math/sub/include"
                                "espdsp/modules/math/mul/include"
                                "espdsp/modules/math/addc/include"
                                "espdsp/modules/math/mulc/include"
                                "espdsp/modules/math/sqrt/include"
                                "espdsp/modules/matrix/include"
                                "espdsp/modules/fft/include"
                                "espdsp/modules/dct/include"
                                "espdsp/modules/conv/include"
                                "espdsp/modules/common/include"
                                "espdsp/modules/common/include_sim"
                                "espdsp/modules/hal"
# EKF files
                                "espdsp/modules/kalman/ekf/include"
                                "espdsp/modules/kalman/ekf_imu13states/include"
)

set(COMPONENT_PRIV_INCLUDEDIRS  "espdsp/modules/dotprod/float"
                                "espdsp/modules/dotprod/fixed")

add_library(espdsp ${COMPONENT_SRCS})
target_include_directories(espdsp PUBLIC ${COMPONENT_ADD_INCLUDEDIRS})
target_include_directories(espdsp PRIVATE ${COMPONENT_PRIV_INCLUDEDIRS})
target_compile_options(espdsp PUBLIC "-g")
